@@ -372,8 +372,6 @@ void reset_multis_after(filestruct *fileptr, int mindex)
     filestruct *oof;
     for (oof = fileptr->next; oof != NULL; oof = oof->next) {
 	alloc_multidata_if_needed(oof);
-	if (oof->multidata == NULL)
-	    continue;
 	if (oof->multidata[mindex] != CNONE)
 	    oof->multidata[mindex] = -1;
 	else
@@ -381,8 +379,6 @@ void reset_multis_after(filestruct *fileptr, int mindex)
     }
     for (; oof != NULL; oof = oof->next) {
 	alloc_multidata_if_needed(oof);
-	if (oof->multidata == NULL)
-	    continue;
 	if (oof->multidata[mindex] == CNONE)
 	    oof->multidata[mindex] = -1;
 	else
@@ -396,8 +392,6 @@ void reset_multis_before(filestruct *fileptr, int mindex)
     filestruct *oof;
     for (oof = fileptr->prev; oof != NULL; oof = oof->prev) {
 	alloc_multidata_if_needed(oof);
-	if (oof->multidata == NULL)
-	    continue;
 	if (oof->multidata[mindex] != CNONE)
 	    oof->multidata[mindex] = -1;
 	else
@@ -405,8 +399,6 @@ void reset_multis_before(filestruct *fileptr, int mindex)
     }
     for (; oof != NULL; oof = oof->prev) {
 	alloc_multidata_if_needed(oof);
-	if (oof->multidata == NULL)
-	    continue;
 	if (oof->multidata[mindex] == CNONE)
 	    oof->multidata[mindex] = -1;
 	else
